k8s/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: shopware-production
    labels:
        pod-security.kubernetes.io/enforce: restricted
        pod-security.kubernetes.io/audit: restricted
        pod-security.kubernetes.io/warn: restricted
