k8s/overlays/production/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: shopware-web
spec:
    replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: shopware-worker
spec:
    replicas: 3
